Added new options buttons again!

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -80,11 +80,7 @@ MRUItem0=/Game/ScanReach
 LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Main.w_Main
-OpenAssetsAtExit=/Game/Textures/UI/UI_V3/T_Options_Pressed.T_Options_Pressed
-OpenAssetsAtExit=/Game/Textures/UI/UI_V3/T_Options_Hoverd.T_Options_Hoverd
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Options.w_Options
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1644,7 +1640,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=0.000
-WindowSize=X=1760.000 Y=1040.000
+WindowSize=X=1770.000 Y=1040.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
