implemented the buttons and further adjusted main widget and other stuff

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,6 +81,8 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Deckview.w_Deckview
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1629,7 +1631,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Textures/UI/UI_V3
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widgets
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1640,7 +1642,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=0.000
-WindowSize=X=1770.000 Y=1040.000
+WindowSize=X=1780.000 Y=1050.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1657,7 +1659,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=C:/Users/Magnus/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content
+UNR=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content
 BRUSH=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
 FBX=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
 FBXAnim=../../../../../../Users/Bendick/Documents/GitHub/SR_Prototype_V3/SR_Prototype_V3/Content/
@@ -2297,17 +2299,17 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 bp_Ship_C=
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SizeBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
@@ -2437,6 +2439,7 @@ StaticMeshComponent.Lighting=True
 /Game/Textures/UI/T_CogWheel_Idle.T_CogWheel_Idle=0
 /Game/Textures/UI/UI_V3/T_Options_Normal.T_Options_Normal=0
 /Game/Textures/UI/T_CogWheel_Hover.T_CogWheel_Hover=0
+/Game/Textures/UI/UI_V3/T_OverviewExit.T_OverviewExit=1
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
