Revert "moved camera number and removed deckview edges"
This reverts commit 83b4bdc62b94df7eac0ff56096e81a74bf5b823d.

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@WINDOWS-EUOFFC3
 LastExecutedLaunchName=WINDOWS-EUOFFC3
-NewWindowPosition=(X=315,Y=148)
+NewWindowPosition=(X=315,Y=143)
 LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -81,8 +81,8 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckOverview.w_DeckOverview
 OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Deckview.w_Deckview
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1642,7 +1642,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=0.000
-WindowSize=X=1790.000 Y=1050.000
+WindowSize=X=1780.000 Y=1050.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2299,19 +2299,19 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 bp_Ship_C=
-Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-SizeBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Translation\" "
+SizeBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
