--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,8 +81,8 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_Deckview.w_Deckview
-OpenAssetsAtExit=/Game/Blueprints/Widgets/w_DeckButton.w_DeckButton
+OpenAssetsAtExit=/Game/Blueprints/Widgets/W_SideInfo.W_SideInfo
+OpenAssetsAtExit=/Game/Blueprints/Widgets/w_shipInfo.w_shipInfo
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1642,7 +1642,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=0.000
-WindowSize=X=1780.000 Y=1050.000
+WindowSize=X=1790.000 Y=1050.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2299,17 +2299,17 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Object="\"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 bp_Ship_C=
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 SizeBox="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object.Layout.Slot\" \"Object.Behavior.ToolTipWidget\" \"Object.Render Transform.RenderTransform\" "
