Added Read and write text Functions

--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,6 +81,7 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1629,7 +1630,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Ship
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1640,7 +1641,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=0.000
-WindowSize=X=1830.000 Y=1050.000
+WindowSize=X=1840.000 Y=1050.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2213,9 +2214,9 @@ SequencerWidgets.TimeStamp=2017.08.02-17.11.01
 SequencerWidgets.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2017.08.02-17.11.16
 TextureEditor.LastCompileMethod=Unknown
-WebSocket.TimeStamp=2017.10.27-12.54.34
+WebSocket.TimeStamp=2017.12.11-12.16.14
 WebSocket.LastCompileMethod=External
-SR_Prototype_V3.TimeStamp=2017.10.27-12.54.34
+SR_Prototype_V3.TimeStamp=2017.12.11-13.07.22
 SR_Prototype_V3.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2017.08.02-10.13.16
 StaticMeshEditor.LastCompileMethod=Unknown
