--- a/SR_Prototype_V3/SR_Prototype_V3.uproject
+++ b/SR_Prototype_V3/SR_Prototype_V3.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "SR_Prototype_V3",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
