Revert "Added Read and write text Functions"
This reverts commit e8dd6aeb4a1cf68376d80209b1f3f1b5684b949c.

--- a/SR_Prototype_V3/SR_Prototype_V3.uproject
+++ b/SR_Prototype_V3/SR_Prototype_V3.uproject
@@ -7,10 +7,7 @@
 		{
 			"Name": "SR_Prototype_V3",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"Engine"
-			]
+			"LoadingPhase": "Default"
 		}
 	]
 }
