--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1640,7 +1640,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=0.000
-WindowSize=X=1830.000 Y=1050.000
+WindowSize=X=1840.000 Y=1050.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2213,7 +2213,7 @@ SequencerWidgets.TimeStamp=2017.08.02-17.11.01
 SequencerWidgets.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2017.08.02-17.11.16
 TextureEditor.LastCompileMethod=Unknown
-WebSocket.TimeStamp=2017.10.27-12.54.34
+WebSocket.TimeStamp=2017.12.11-12.16.14
 WebSocket.LastCompileMethod=External
 SR_Prototype_V3.TimeStamp=2017.10.27-12.54.34
 SR_Prototype_V3.LastCompileMethod=External
@@ -2454,7 +2454,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=CompilerResultsLog
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
