--- a/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SR_Prototype_V3/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,7 +81,7 @@ LastLevel=/Game/ScanReach
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Ship.bp_Ship
+OpenAssetsAtExit=/Game/Blueprints/Ship/bp_Sensor.bp_Sensor
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1641,7 +1641,7 @@ AssetPropertyPicker.CurrentViewType=0
 
 [RootWindow]
 ScreenPosition=X=85.000 Y=0.000
-WindowSize=X=1870.000 Y=1050.000
+WindowSize=X=1880.000 Y=1050.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
